--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build", 
-    "start": "next start -p $PORT",
-    "lint": "next lint"
+    "dev": "nodemon server.js",
+    "build": "next build",
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@upstash/redis": "^0.2.1",
+    "bignumber.js": "^9.0.2",
     "bnc-onboard": "^1.37.0",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "ethers": "^5.5.2",
+    "express": "^4.17.2",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.2.27",
+    "moralis": "^1.2.3",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -26,7 +30,7 @@
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.4"
   },
-  "engineStrict" : true,
+  "engineStrict": true,
   "engines": {
     "npm": "~8.1.0",
     "node": "~16.13.0"
